--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/aos.js"></script>
 	<script src="js/simpleParallax.min.js"></script>
+	<script src="js/parallax.min.js"></script>
 	</head>
 
 	<body>
 		<div class="overflow-fix">
 		
+			
+		<!-- Video Background -->
 		<div class="jumbotron jumbotron-fluid vh-75">
 			<div class="overlay"></div>
 			<video playinline autoplay muted loop poster="">    
@@ -42,6 +45,8 @@
 		<div class="icon-scroll"></div>
 		</div>
 		
+			
+		<!-- Fixed Navigation -->
 		<nav class="navbar navbar-expand-lg navbar-dark border-bottom shadowed2 fixed-top w-100 navscroll">
 			<a class="navbar-brand" href="#"><img class="navscroll" src="images/Logo-Header_white.png" alt="Pulse Labs Logo" /></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
@@ -71,16 +76,20 @@
 			</div>		
 		</nav>
 	  
+			
+		<!-- Green Shapes -->
 		<div class="container position-relative mw-100">
 			<div class="row mw-100 greenshapes">
-				<img class="darkgreen thumbnail shadowed" src="images/darkgreen.png" alt="darkgreenshape" />
+				<img class="darkgreen parallax-green shadowed" src="images/darkgreen.png" alt="darkgreenshape" />
 				<img class="position-relative lightgreen shadowed" src="images/lightgreen.png" alt="lightkgreenshape" style="margin-top: -500px" />
 			</div>
 		</div>
 			
+			
+		<!-- VR Blurb -->
 		<div class="container-fluid m-auto">
 			<div class="row background-pulse greenshapes justify-content-center">
-				<div class="col-sm-2 pb-5" style="min-width: 300px">
+				<div class="col-sm-2 pb-5" style="min-width: 300px; margin-right: 3vw;">
 					<div class="tk-circle shadowed2" data-aos="fade-right">
 						<img src="images/vivepro-hs.png" alt="VR Headset" class="shadowed2" style="width: 125%; margin-left:-25px;" />
 					</div>
@@ -88,19 +97,66 @@
 				<div class="col-sm-6 pb-5 vr-bg" data-aos="fade-left" data-aos-delay>
 					<p class="content-title">Virtual Reality</p>
 					<p class="content-sub-title">Virtual Reality is super cool and you should try it then you should call us</p>
-					<p class="content-text">The definition of virtual reality comes, naturally, from the definitions for both ‘virtual’ and ‘reality’. The definition of ‘virtual’ is near and reality is what we experience as human beings. So the term ‘virtual reality’ basically means ‘near-reality’. This could, of course, mean anything but it usually refers to a specific type of reality emulation.</p>
-					<p class="content-text">
+					<p class="content-text text-align-justify">The definition of virtual reality comes, naturally, from the definitions for both ‘virtual’ and ‘reality’. The definition of ‘virtual’ is near and reality is what we experience as human beings. So the term ‘virtual reality’ basically means ‘near-reality’. This could, of course, mean anything but it usually refers to a specific type of reality emulation.</p>
+					<p class="content-text text-align-justify">
 					We know the world through our senses and perception systems. In school we all learned that we have five senses: taste, touch, smell, sight and hearing. These are however only our most obvious sense organs. The truth is that humans have many more senses than this, such as a sense of balance for example. These other sensory inputs, plus some special processing of sensory information by our brains ensures that we have a rich flow of information from the environment to our minds.</p>
+					<a href="#"><button type="button" class="btn-purple">View Our Web VR Experience</button></a>
 				</div>
 			</div>	
 		</div>
+			
+			
+		<!-- AR Blurb -->
+		<div class="container-fluid m-auto mt-5 greenshapes">
+			<div class="row background-pulse justify-content-center swap">
+				<div class="col-sm-6 pb-5 ar-bg swapitem" data-aos="fade-right" data-aos-delay>
+					<p class="content-title text-align-right">Augmented Reality</p>
+					<p class="content-sub-title text-align-right">Virtual Reality is super cool and you should try it then you should call us</p>
+					<p class="content-text text-align-justify">The definition of virtual reality comes, naturally, from the definitions for both ‘virtual’ and ‘reality’. The definition of ‘virtual’ is near and reality is what we experience as human beings. So the term ‘virtual reality’ basically means ‘near-reality’. This could, of course, mean anything but it usually refers to a specific type of reality emulation.</p>
+					<p class="content-text text-align-justify">
+					We know the world through our senses and perception systems. In school we all learned that we have five senses: taste, touch, smell, sight and hearing. These are however only our most obvious sense organs. The truth is that humans have many more senses than this, such as a sense of balance for example. These other sensory inputs, plus some special processing of sensory information by our brains ensures that we have a rich flow of information from the environment to our minds.</p>
+					<a href="#"><button type="button" class="btn-purple">View Our Web AR Experience</button></a>
+				</div>
+				<div class="col-sm-2 pb-5 swaptiem" style="min-width: 300px; margin-left: 3vw;">
+					<div class="tk-circle shadowed2" data-aos="fade-left">
+						<img src="images/hololens2-hs.png" alt="VR Headset" class="shadowed2" style="width: 125%; margin-left:-25px;" />
+					</div>
+				</div>
+			</div>	
+		</div>
+			
+			
+		<div class="container-fluid greenshapes parallax-window m-auto pt-5" data-parallax="scroll" data-image-src="images/Parallax-Purple.jpg">
+			<div class="row justify-content-center">
+				<div class="col">
+					<div class="text-light">
+						<center>
+							<span class="font-weight-bold" style="font-size:2rem">Ready to talk?</span>
+							<span style="font-size:2rem">Contact us today to get started!</span>
+						</center>
+					</div>
+				</div>
+			</div>
+			<div class="row justify-content-center pt-5">
+				<div class="col">
+					<center>
+						<a href="#" class="justify-content-center">
+							<button type="button" class="btn-black p-4 px-5">
+								I'm Ready
+							</button>
+						</a>
+					</center>
+				</div>
+			</div>
+		</div>
 		
 		
-		
+		<!-- Required Scripts -->
 		<script src="js/scripts.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/bootstrap.bundle.min.js"></script>
 
+		<!-- Scroll Transition Script -->
 		<script>
 		  AOS.init();
 		</script>
