--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Pulse Labs - Immersive Solutions for Enterprise</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+	<link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="css/bootstrap.css" rel="stylesheet">
