--- a/index.html
+++ b/index.html
@@ -150,6 +150,43 @@
 				</div>
 			</div>
 		</div>
+			
+		<div class="container greenshapes m-auto text-center">
+			<h2 class="pt-5">Who has worked with us?</h2>
+			<hr>
+			<div class="row mx-auto my-3 pt-3">
+				<div id="clientCarousel" class="carousel slide w-100" data-ride="carousel">
+					<div class="carousel-inner w-100" role="listbox">
+						<div class="carousel-item active">
+						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=1">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=2">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=3">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=4">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=5">
+					</div>
+					<div class="carousel-item">
+						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=6">
+					</div>
+					</div>
+					<a class="carousel-control-prev" href="#clientCarousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#clientCarousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>				
+				</div>
+			</div>
+		</div>
 		
 		
 		<!-- Required Scripts -->
