--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-grid.css" rel="stylesheet">
 	<link href="css/aos.css" rel="stylesheet">
-
-	<script src="js/jquery-3.3.1.min.js"></script>
+	<link href="css/carousel.css" rel="stylesheet">
 	<script src="js/aos.js"></script>
 	<script src="js/simpleParallax.min.js"></script>
-	<script src="js/parallax.min.js"></script>
 	</head>
 
 	<body>
@@ -59,13 +57,13 @@
 						<a class="nav-link" href="#">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Solutions</a>
+						<a class="nav-link" href="#">Portfolio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Services</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">News</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Portfolio</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Contact</a>
@@ -126,7 +124,7 @@
 			</div>	
 		</div>
 			
-			
+		<!-- Call to action bar -->
 		<div class="container-fluid greenshapes parallax-window m-auto pt-5" data-parallax="scroll" data-image-src="images/Parallax-Purple.jpg">
 			<div class="row justify-content-center">
 				<div class="col">
@@ -151,48 +149,115 @@
 			</div>
 		</div>
 			
+			
+		<!-- client list -->
 		<div class="container greenshapes m-auto text-center">
-			<h2 class="pt-5">Who has worked with us?</h2>
+			<p class="pt-5 text-pulse display-5 font-weight-bold">Who has worked with us?</p>
+			 <div id="carousel-clients" class="carousel slide mt-5" data-ride="carousel">
+				<div class="carousel-inner row w-100 mx-auto" role="listbox">
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
+						<img src="images/clients/client1.png" class="img-fluid mx-auto d-block" alt="Abbott">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client2.png" class="img-fluid mx-auto d-block" alt="Cardinal Health">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client3.png" class="img-fluid mx-auto d-block" alt="United States Air Force">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client4.png" class="img-fluid mx-auto d-block" alt="Washbrun Tech">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client5.png" class="img-fluid mx-auto d-block" alt="Blue Cross Blue Shield">
+					</div>
+				<!--Need to repeat because carousel bugs out with less than 8 cards -->
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client1.png" class="img-fluid mx-auto d-block" alt="Abbott2">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client2.png" class="img-fluid mx-auto d-block" alt="Cardinal Health2">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client3.png" class="img-fluid mx-auto d-block" alt="United States Air Force2">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client4.png" class="img-fluid mx-auto d-block" alt="Washbrun Tech2">
+					</div>
+					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+						<img src="images/clients/client5.png" class="img-fluid mx-auto d-block" alt="Blue Cross Blue Shield2">
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carousel-clients" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carousel-clients" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+		</div>
+			
+			
+		<!-- team members -->
+		<div class="container greenshapes m-auto text-center pt-5">
 			<hr>
-			<div class="row mx-auto my-3 pt-3">
-				<div id="clientCarousel" class="carousel slide w-100" data-ride="carousel">
-					<div class="carousel-inner w-100" role="listbox">
-						<div class="carousel-item active">
-						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=1">
+			<p class="pt-5 text-pulse display-5 font-weight-bold">Meet the Team!</p>
+			<div class="row pt-5">
+				<div class="col" data-aos="flip-right">
+					<div class="tk-circle shadowed2"></div>
+					<p class="display-6 font-weight-bold pt-4">Team Member 1</p>
+					<p>Title and Position</p>
+				</div>	
+				<div class="col" data-aos="flip-right">
+					<div class="tk-circle shadowed2"></div>
+					<p class="display-6 font-weight-bold pt-4">Team Member 2</p>
+					<p>Title and Position</p>
+				</div>	
+				<div class="col" data-aos="flip-right">
+					<div class="tk-circle shadowed2"></div>
+					<p class="display-6 font-weight-bold pt-4">Team Member 3</p>
+					<p>Title and Position</p>
+				</div>	
+				<div class="col" data-aos="flip-right">
+					<div class="tk-circle shadowed2"></div>
+					<p class="display-6 font-weight-bold pt-4">Team Member 4</p>
+					<p>Title and Position</p>
+				</div>		
+			</div>
+		</div>
+			
+			
+		<!-- news -->
+		<div class="container greenshapes m-auto pt-5">
+			<hr>
+			<p class="pt-5 text-pulse display-5 font-weight-bold text-center">What's Happening?</p>
+			<div class="row pt-5">
+				<div class="col-sm-3 pt-3">
+					<div class="card text-white bg-dark2">
+						<img class="card-img-top" src="images/Parallax-Purple.jpg" alt="card1" />
+						<div class="card-body">
+							<p class="text-align-left">Author Name</p>
+							<p class="card-title display-6">Card Title</p>
+							<hr style="border-top: 1px solid #fff;">
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Continue Reading...</a>
+							<span class="badge badge-pill badge-secondary">Comments 05</span>
+						</div>
 					</div>
-					<div class="carousel-item">
-						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=2">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=3">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=4">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=5">
-					</div>
-					<div class="carousel-item">
-						<img class="d-block col-3 img-fluid" src="http://placehold.it/350x180?text=6">
-					</div>
-					</div>
-					<a class="carousel-control-prev" href="#clientCarousel" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#clientCarousel" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>				
 				</div>
 			</div>
 		</div>
 		
 		
+		
 		<!-- Required Scripts -->
-		<script src="js/scripts.js"></script>
+
+		<script src="js/jquery-3.3.1.min.js"></script>
+		<script src="js/parallax.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/bootstrap.bundle.min.js"></script>
+		<script src="js/scripts.js"></script>
 
 		<!-- Scroll Transition Script -->
 		<script>
