--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
 	<title>Pulse Labs - Immersive Solutions for Enterprise</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-	<link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
+	<link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/images/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="css/bootstrap.css" rel="stylesheet">
@@ -79,8 +95,8 @@
 		<!-- Green Shapes -->
 		<div class="container position-relative mw-100">
 			<div class="row mw-100 greenshapes">
-				<img class="darkgreen parallax-green shadowed" src="images/darkgreen.png" alt="darkgreenshape" />
-				<img class="position-relative lightgreen shadowed" src="images/lightgreen.png" alt="lightkgreenshape" style="margin-top: -500px" />
+				<img class="transition parallax-green shadowed" src="images/darkgreen.png" alt="darkgreenshape" />
+				<img class="position-relative lightgreen shadowed" src="images/lightgreen.png" alt="lightgreenshape" style="margin-top: -500px" />
 			</div>
 		</div>
 			
@@ -152,7 +168,7 @@
 			
 		<!-- client list -->
 		<div class="container greenshapes m-auto text-center">
-			<p class="pt-5 text-pulse display-5 font-weight-bold">Who has worked with us?</p>
+			<p class="pt-5 display-5 font-weight-bold">Who has worked with us?</p>
 			 <div id="carousel-clients" class="carousel slide mt-5" data-ride="carousel">
 				<div class="carousel-inner row w-100 mx-auto" role="listbox">
 					<div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
@@ -202,7 +218,7 @@
 		<!-- team members -->
 		<div class="container greenshapes m-auto text-center pt-5">
 			<hr>
-			<p class="pt-5 text-pulse display-5 font-weight-bold">Meet the Team!</p>
+			<p class="pt-5 display-5 font-weight-bold">Meet the Team!</p>
 			<div class="row pt-5">
 				<div class="col" data-aos="flip-right">
 					<div class="tk-circle shadowed2"></div>
@@ -229,11 +245,37 @@
 			
 			
 		<!-- news -->
-		<div class="container greenshapes m-auto pt-5">
+		<div class="container greenshapes pt-5 mb-n5">
 			<hr>
-			<p class="pt-5 text-pulse display-5 font-weight-bold text-center">What's Happening?</p>
+			<p class="pt-5 display-5 font-weight-bold text-center">What's Happening?</p>
 			<div class="row pt-5">
-				<div class="col-sm-3 pt-3">
+				<div class="col-sm-12 col-md-6 col-lg-4 pt-3">
+					<div class="card text-white bg-dark2">
+						<img class="card-img-top" src="images/Parallax-Purple.jpg" alt="card1" />
+						<div class="card-body">
+							<p class="text-align-left">Author Name</p>
+							<p class="card-title display-6">Card Title</p>
+							<hr style="border-top: 1px solid #fff;">
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Continue Reading...</a>
+							<span class="badge badge-pill badge-secondary">Comments 05</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 pt-3">
+					<div class="card text-white bg-dark2">
+						<img class="card-img-top" src="images/Parallax-Purple.jpg" alt="card1" />
+						<div class="card-body">
+							<p class="text-align-left">Author Name</p>
+							<p class="card-title display-6">Card Title</p>
+							<hr style="border-top: 1px solid #fff;">
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Continue Reading...</a>
+							<span class="badge badge-pill badge-secondary">Comments 05</span>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 pt-3">
 					<div class="card text-white bg-dark2">
 						<img class="card-img-top" src="images/Parallax-Purple.jpg" alt="card1" />
 						<div class="card-body">
@@ -248,6 +290,51 @@
 				</div>
 			</div>
 		</div>
+			
+			
+		<!-- Grey Shapes -->
+		<div class="container-fluid mw-100">
+			<div class="row">
+				<img src="images/grey.png" alt="greyshape" />
+			</div>
+		</div>
+			
+			
+		<!-- Footer -->
+		<footer class="container-fluid m-auto footer-main">
+			<div class="row justify-content-center mb-4">
+				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 map">
+					<div class="gmap_canvas">
+						<iframe width="256" height="256" id="gmap_canvas" src="https://maps.google.com/maps?q=Pulse%20Design%20Group%2C%20Lenexa%2C%20KS&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+					<img src="images/Logo-Header_white.png" alt="logo" />
+					<p class="text-white mb-0">8207 Melrose Drive</p>
+					<p class="text-white mb-0">Suite 145</p>
+					<p class="text-white mb-0">Lenexa, Kansas 66214</p>
+					<br>
+					<p class="text-white mb-0">Office 913.438.9095</p>
+					<p class="text-white mb-0">Fax 913.438.2660</p>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 pt-5">
+					<a href="#"><button type="button" class="btn-purple py-4" style="font-size: 1.5rem">Contact Us Now!</button></a>
+				</div>
+			</div>
+			<!-- Social Media -->
+			<div class="row background-pulse justify-content-center p-3">
+				<a href="mailto:mail@pulsedesigngroup.com"><div class="transition social social-mail px-2"></div></a>
+				<a href="https://www.linkedin.com/company/pulse-design-group" target="_blank"><div class="transition social social-linkedin px-2"></div></a>
+				<a href="https://www.facebook.com/PulseDesignGroup" target="_blank"><div class="transition social social-facebook px-2"></div></a>
+				<a href="https://twitter.com/PulseDG" target="_blank"><div class="transition social social-twitter px-2"></div></a>
+				<a href="http://vimeo.com/pulsedesigngroup" target="_blank"><div class="transition social social-vimeo px-2"></div></a>
+			</div>
+			<div class="row justify-content-center p-2" style="background-color: #0d0d0d">
+				<span class="align-middle font-italic" style="color:#666;">&copy;2019  Pulse Labs.  All Rights Reserved.</span>
+			</div>
+		</footer>
+			
+			
 		
 		
 		
