--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			<div class="container position-relative" style="z-index: 9;">
 				<div class="d-flex h-100 text-center align-items-center title-text">
 				  <div class="w-100">
-					<p class="display-1 font-weight-bold text-pulse text-left">Immersive Solutions</p>
-					<p class="display-1 font-weight-bold text-white text-left">For Enterprise</p>
+					<p class="display-1 font-weight-bold text-pulse text-left shadowed2">Immersive Solutions</p>
+					<p class="display-1 font-weight-bold text-white text-left shadowed2">For Enterprise</p>
 					<center>
 						<a href="#"><button type="button" class="btn-black mt-5">Learn More</button></a>
 					</center>
