--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link rel="manifest" href="/images/favicon/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" content="#0d0d0d">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="css/bootstrap.css" rel="stylesheet">
