--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<!-- Video Background -->
 		<div class="jumbotron jumbotron-fluid h-75">
 			<div class="overlay" style="height: 150%;"></div>
-			<video playinline autoplay muted loop poster="images/HomePoster_01.png" style="height: 1080px">    
+			<video preload="none" playinline autoplay muted loop poster="images/HomePoster_01.png" style="height: 1080px">    
 				<source src="https://s3.us-east-2.amazonaws.com/aws-codestar-us-east-2-774818991484/PulseHeroVid.mp4" data-src="https://s3.us-east-2.amazonaws.com/aws-codestar-us-east-2-774818991484/PulseHeroVid.mp4" type="video/mp4">
 			</video>
 
