--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
 	<link rel="manifest" href="/images/favicon/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileColor" content="#0d0d0d">
 	<meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#0d0d0d">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -40,7 +40,7 @@
 		<!-- Video Background -->
 		<div class="jumbotron jumbotron-fluid h-75">
 			<div class="overlay" style="height: 150%;"></div>
-			<video playsinline autoplay muted loop poster="images/HomePoster_01.png" style="height: 1080px">    
+			<video autoplay muted loop poster="images/HomePoster_01.png" height="1080px" width="1920px">    
 				<source src="https://s3.us-east-2.amazonaws.com/aws-codestar-us-east-2-774818991484/PulseHeroVid.mp4" data-src="https://s3.us-east-2.amazonaws.com/aws-codestar-us-east-2-774818991484/PulseHeroVid.mp4" type="video/mp4">
 			</video>
 
